상황별로 메인모델과 보조모델을 사용하도록 하는 설정 추가 설정에 따라 모델을 선택해 응답을 받는 로직 추가 stat계산 후 절정 여부를 log생성으로 넘겨주도록 수정 db일부 항목 수정 프롬 수정

--- a/system/Embedding.css
+++ b/system/Embedding.css
@@ -96,8 +96,8 @@ border-color: #555;
 box-shadow: 0px 0px 15px -5px #ffffff;
 }
 
-.history{
-visibility: {{#when::history::vis::1}}visible{{:else}}hidden{{/when}};
+.showLog{
+visibility: {{#when::showLog::vis::1}}visible{{:else}}hidden{{/when}};
 }
 /* --- SHARED COMPONENTS (Progress Bars & Status) --- */
 
