--- a/system/Embedding.css
+++ b/system/Embedding.css
@@ -90,7 +90,7 @@ input:checked + .slider:before { transform: translateX(1.25rem); background-colo
 /* Triple Switch */
 .triple-switch { position: relative; display: inline-block; width: 5rem; height: 1.25rem; margin-left: 0.5rem; vertical-align: middle; }
 .triple-switch input { opacity: 0; width: 0; height: 0; }
-.triple-slider { position: absolute; cursor: pointer; top: 0; left: 0; right: 0; bottom: 0; border: 1px solid #444; border-radius: 1rem; background: #333; }
+.triple-slider { position: absolute; cursor: pointer; top: 0; left: 0; right: 0; bottom: 0; border: 1px solid #60d9f7; border-radius: 1rem; background: #333; }
 .triple-slider:before { position: absolute; content: ""; height: 0.85rem; width: 0.85rem; top: 0.15rem; background-color: #888; border-radius: 50%; transition: transform 0.2s, background-color 0.2s; }
 input#one:checked ~ .triple-slider:before { background: #60d9f7; transform: translate3d(0.2rem,0,0); }
 input#two:checked ~ .triple-slider:before { background: #60d9f7; transform: translate3d(2rem,0,0); }
