--- a/system/Embedding.css
+++ b/system/Embedding.css
@@ -452,7 +452,7 @@ h3 {
 }
 
 /* Switches */
-.switch {
+.x-risu-switch {
     position: relative;
     display: inline-block;
     width: 2.5rem;
@@ -461,13 +461,13 @@ h3 {
     margin-left: 0.5rem;
 }
 
-.switch input {
+.x-risu-switch input {
     opacity: 0;
     width: 0;
     height: 0;
 }
 
-.slider {
+.x-risu-slider {
     position: absolute;
     cursor: pointer;
     top: 0;
@@ -480,7 +480,7 @@ h3 {
     border: 1px solid #444;
 }
 
-.slider:before {
+.x-risu-slider:before {
     position: absolute;
     content: "";
     height: 0.85rem;
@@ -492,18 +492,18 @@ h3 {
     border-radius: 50%;
 }
 
-input:checked+.slider {
+input:checked+.x-risu-slider {
     background-color: #1a3a4a;
     border-color: #60d9f7;
 }
 
-input:checked+.slider:before {
+input:checked+.x-risu-slider:before {
     transform: translateX(1.25rem);
     background-color: #60d9f7;
 }
 
 /* Triple Switch */
-.triple-switch {
+.x-risu-triple-switch {
     position: relative;
     display: inline-block;
     width: 4rem;
@@ -512,13 +512,13 @@ input:checked+.slider:before {
     vertical-align: middle;
 }
 
-.triple-switch input {
+.x-risu-triple-switch input {
     opacity: 0;
     width: 0;
     height: 0;
 }
 
-.triple-slider {
+.x-risu-triple-slider {
     position: absolute;
     cursor: pointer;
     top: 0;
@@ -530,7 +530,7 @@ input:checked+.slider:before {
     background: #333;
 }
 
-.triple-slider:before {
+.x-risu-triple-slider:before {
     position: absolute;
     content: "";
     height: 0.85rem;
@@ -541,17 +541,17 @@ input:checked+.slider:before {
     transition: transform 0.2s, background-color 0.2s;
 }
 
-input#one:checked~.triple-slider:before {
+input#one:checked~.x-risu-triple-slider:before {
     background: #60d9f7;
     transform: translate3d(0.2rem, 0, 0);
 }
 
-input#two:checked~.triple-slider:before {
+input#two:checked~.x-risu-triple-slider:before {
     background: #60d9f7;
     transform: translate3d(1.5rem, 0, 0);
 }
 
-input#three:checked~.triple-slider:before {
+input#three:checked~.x-risu-triple-slider:before {
     background: #60d9f7;
     transform: translate3d(2.9rem, 0, 0);
 }
