--- a/system/Embedding.css
+++ b/system/Embedding.css
@@ -249,6 +249,7 @@ h3 {
     border: 1px solid #222;
     margin-top: 0.5rem;
     color: #aaa;
+    visibility: {{getvar::showLog}};
 }
 
 /* Tabs */
