--- a/system/Embedding.css
+++ b/system/Embedding.css
@@ -460,6 +460,7 @@ h3 {
     height: 1.25rem;
     vertical-align: middle;
     margin-left: 0.5rem;
+    pointer-events: none;
 }
 
 .x-risu-switch input {
